--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div id="particles-js">
 		<div class="main-content">
 			<figure>
-				<img src="https://avatars2.githubusercontent.com/u/43624608?s=400&u=f5be34a57e331f77688a91b112e06795509c6060&v=4" class="img-circle" alt="Ahmad Thoriq Najahi">
+				<img src="https://avatars2.githubusercontent.com/u/43624608?s=400&u=f5be34a57e331f77688a91b112e06795509c6060&v=4" class="img-circle" size="50%" alt="Ahmad Thoriq Najahi">
 			</figure>
 			<h1>NgntdKernel</h1>
 			<h2>Custom Kernel For Xiaomi Redmi 4A & 5A</h2>
