--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
 			<ul class="social">
 				<li><a href="https://github.com/najahiiii" target="_blank"><i class="icon-github"></i></a></li>
 				<li><a href="https://www.facebook.com/najahiii" target="_blank"><i class="icon-facebook"></i></a></li>
-				<li><a href="https://t.me/najahiii" target="_blank"><i class="icon-telegram"></i></a></li>
 				<li><a href="#" target="_blank">XDA</a></li>
 			</ul>
 		</div>
 		<footer id="footer">
-			&copy; 2018 Ahmad Thoriq Najahi
+			&copy; 2018 <a href="https://t.me/najahiii" target="_blank">Ahmad Thoriq Najahi</a>
 		</footer>
 	</div>
 	<script src="js/particles.js"></script>
