--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,7 +9,7 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/43624608?s=400&u=f5be34a57e331f77688a91b112e06795509c6060&v=4">
 </head>
 <body>
 	<div id="particles-js">
