Add Download button.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			</figure>
 			<h1>NgntdKernel</h1>
 			<h2>Custom Kernel For Xiaomi Redmi 4A & 5A</h2>
+			<button>Download</button>
 			<ul class="social">
 				<li><a href="https://github.com/najahiiii" target="_blank"><i class="icon-github"></i></a></li>
 				<li><a href="https://www.facebook.com/najahiii" target="_blank"><i class="icon-facebook"></i></a></li>
