--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>NgntdKernel|Rolex/Riva</title>
+	<title>NgntdKernel|Rolex-Riva</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/43624608?s=400&u=f5be34a57e331f77688a91b112e06795509c6060&v=4">
 </head>
@@ -15,15 +16,17 @@
 	<div id="particles-js">
 		<div class="main-content">
 			<figure>
-				<img src="images/profile.jpg" class="img-circle" width="150" height="150" alt="NgntdKernel">
+				<img src="images/profile.jpg" class="rounded-circle" width="150" height="150" alt="NgntdKernel">
 			</figure>
 			<h1>NgntdKernel</h1>
-			<button>Download</button>
+			<a href="https://sourceforge.net/projects/ngntdkernel/files/">
+			<button type="button" class="btn btn-block btn-dark" target="_blank">Download Here</button>
+			</a>
 			<h2>Custom Kernel For Xiaomi Redmi 4A & 5A</h2>
 			<ul class="social">
 				<li><a href="https://github.com/najahiiii" target="_blank"><i class="icon-github"></i></a></li>
 				<li><a href="https://www.facebook.com/najahiii" target="_blank"><i class="icon-facebook"></i></a></li>
-				<li><a href="#" target="_blank">XDA</a></li>
+				<li><a href="https://forum.xda-developers.com/member.php?u=8807082" target="_blank">XDA</a></li>
 			</ul>
 		</div>
 		<footer id="footer">
